--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
         run: npm install
         
       - name: Build application
-        run: npm run build
+        run: npx vite build
         
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
